--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
 black = "^23.10.1"
+flake8 = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core"]
