--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ uvicorn = {extras = ["standard"], version = "^0.23.2"}
 pytest = "^7.4.3"
 black = "^23.10.1"
 flake8 = "^6.1.0"
+httpx = "^0.25.0"
 
 [build-system]
 requires = ["poetry-core"]
