--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ version = "0.1.0"
 description = "Continua.ai project"
 authors = ["lyle"]
 readme = "README.md"
-packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "3.11"
@@ -18,6 +17,7 @@ pytest = "^7.4.3"
 black = "^23.10.1"
 flake8 = "^6.1.0"
 httpx = "^0.25.0"
+ruff = "^0.1.3"
 
 [build-system]
 requires = ["poetry-core"]
